--- a/css/godsmu.css
+++ b/css/godsmu.css
@@ -2094,3 +2094,7 @@ box-shadow: 0px 10px 20px 0px rgb(74 104 169 / 0.5);
 .footer-text {
   color: #ff8a56 !important;
 }
+
+.category {
+  width: 14% !important;
+}
