--- a/css/godsmu.css
+++ b/css/godsmu.css
@@ -2095,6 +2095,7 @@ box-shadow: 0px 10px 20px 0px rgb(74 104 169 / 0.5);
   color: #ff8a56 !important;
 }
 
-.category {
-  width: 14% !important;
+.category, .all {
+  width: 132px;
+  margin: 3px 1px;
 }
